2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/inline/rtems/rtems/status.inl: Fix broken doxygen comment.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Doxygen.in: Activate INCLUDE_GRAPH and 
	INCLUDED_BY_GRAPH.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* score/include/rtems/score/timestamp.h,
	score/include/rtems/score/timestamp64.h,
	score/include/rtems/score/watchdog.h:
	Misc. doxygen fixes.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/devctl.h: Move mal-placed @file.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/devfs/devfs.h, libfs/src/rfs/rtems-rfs-block-pos.h,
	libfs/src/rfs/rtems-rfs-block.h, libfs/src/rfs/rtems-rfs-dir.h,
	libfs/src/rfs/rtems-rfs-group.h, libfs/src/rfs/rtems-rfs-inode.h:
	Fix broken doxygen commands.

2010-06-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Doxygen.in: Update.
	Misc. fixes.
	* doxy-filter: New (Copy of ../tools/build/doxy-filter).
	* Makefile.am: Add doxy-filter.

2010-06-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove c4x.
	* score/cpu/Makefile.am: Remove c4x.

2010-06-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/unmount.c: Removed obsolete declarations.  Fixed
	invalid memory free.

2010-06-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/rtems/ftpfs.h, libnetworking/lib/ftpfs.c:  Removed
	rtems_ftpfs_mount().

2010-06-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/mount-mktgt.c: New file.
	* libcsupport/Makefile.am: Reflect change above.
	* libcsupport/include/rtems/libio.h: Declare
	mount_and_make_target_path().

2010-06-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/rtems/ftpfs.h, libnetworking/lib/ftpfs.c:  Added
	rtems_ftpfs_mount() again.  Documentation.

2010-06-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio.h, sapi/include/confdefs.h: Added